# chomsky-corpus

./: .gitignore  README.md  pyproject.toml
docs/: schema.md
scripts/: build_dataset.py
