[project]
name = "chomsky-rag-agent"
version = "0.1.0"
description = "Dataset pipeline for scraping, validating, and packaging a Chomsky corpus for Hugging Face"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "datasets>=4.1.1",
    "huggingface-hub>=0.34.4",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
]
